# nanochat-cpp

./: .gitignore  LICENSE  README.ja.md  README.md  pyproject.toml
cpp/: CMakeLists.txt  README.ja.md  README.md  bpe.h  bpe_test.cpp  example-japanese-calc.md  gpt.h  main.cpp  test_grad.cpp  tokenizer.h  tool.h
dev/: LEADERBOARD.md  repackage_data_reference.py
nanochat/: checkpoint_manager.py  common.py  engine.py  execution.py  flash_attention.py  gpt.py  optim.py  tokenizer.py
runs/: runcpu.sh  speedrun.sh
scripts/: base_eval.py  base_train.py  chat_eval.py  chat_rl.py  chat_sft.py  infer_bench.py  tok_eval.py  tok_train.py
tasks/: arc.py  common.py  gsm8k.py  humaneval.py  mmlu.py  smoltalk.py
tests/: test_attention_fallback.py  test_engine.py  test_execution.py  test_optim.py  test_tasks.py  test_tokenizer.py
